--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://vacaition.netlify.app/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="vacAItion is a web application that allows users to search for vacation destinations based on their preferences."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="https://vacaition.netlify.app/logo192.png" />
+    <link rel="manifest" href="https://vacaition.netlify.app/manifest.json" />
     <title>vacAItion</title>
   </head>
   <body>
